# LCIPA

./: .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  main.py  pyproject.toml
assistant/: multi_agents.py  single_agent.py
assistant/config/: __init__.py  config.py
assistant/graph/agents/: coder.py  doc_handler.py  interlocutor.py  mailman.py  researcher.py  supervisor.py
assistant/graph/state/agent/: agent_state.py
assistant/graph/state/base/: state.py
assistant/graph/state/doc/: doc_writing_state.py
assistant/graph/utils/: agent.py  graph.py
assistant/llm_provider/openai/: gpt.py
assistant/tools/documents/: simplefile.py
assistant/tools/interpreter/: python.py
assistant/tools/mails/: gmail.py
assistant/tools/math/: calculator.py
assistant/tools/researcher/: bing.py  serpapi.py  tavily_search.py  wikipedia.py
chat_bot/: __init__.py  cb_demo.py  ma_demo.py
chat_bot/graph/: state.py  tool.py  utils.py
chat_bot/lc/: RAG.py  db.py  llm.py  tool.py
config_example/: .env  credentials.json  passwd.yaml  token.json
docs/: jsyl.md
docs/BYLW/: bylw.md  bylw2.md  bysj.docx
examples/: LangChain_Gmail.ipynb  Test.ipynb  chatbot.ipynb  multi-agent.ipynb  zhongzhuan.ipynb
examples/multi_agent/: agent_supervisor.ipynb  hierarchical_agent_teams.ipynb  multi-agent-collaboration.ipynb
gpt_researcher/config/: config.py
gpt_researcher/master/: prompts.py
pages/: 1_Chat_bot.py  2_Chat_bot.py  3_Chat_bot_Plus.py  4_Research(beta).py  5_Files.py  6_Config.py  6_Setting.py  8_test.py
research/: __init__.py
research/agents/: editor.py  master.py  researcher.py
research/agents/gpt_researcher/: README.md
research/agents/gpt_researcher/config/: config.py
research/agents/gpt_researcher/llm_provider/: __init__.py
research/agents/gpt_researcher/master/: agent.py  functions.py  prompts.py
research/agents/gpt_researcher/scraper/: scraper.py
research/agents/gpt_researcher/utils/: llm.py
research/agents/utils/: llms.py
research/gpt_researcher/: README.md
research/gpt_researcher/llm_provider/openai/: openai.py
research/gpt_researcher/master/: agent.py  functions.py  prompts.py
research/gpt_researcher/memory/: embeddings.py
research/gpt_researcher/scraper/: scraper.py
research/gpt_researcher/utils/: llm.py
research/researcher/: README.md
research/researcher/master/: agent.py  functions.py  prompts.py
research/researcher/scraper/: scraper.py
research/researcher/utils/: llm.py
researcher/: __init__.py  main.py  task.json
researcher/agents/: editor.py  master.py
researcher/agents/utils/: llms.py  views.py
utils/: file_helper.py  json.py  login.py  redirect.py  welcome.py
