[tool.poetry]
name = "CCBot"
version = "0.1.0"
description = ""
authors = ["Cai, Zhengyang <tsieyy77@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chat_bot"}]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain = {version = ">=0.1.0"}
openai = ">=1.6.1"
duckduckgo-search = ">4.0"
pypdf = "^3.12.2"
sentence-transformers = "^2.2.2"
torch = ">=2.0.0, !=2.0.1"
tabulate = "^0.9.0"
streamlit-feedback = "^0.0.9"
langchain-experimental = "^0.0.49"
streamlit = ">=1.26"
docarray = "^0.38.0"
hnswlib = "^0.7.0"
langchain-community = "^0.0.12"
langchain-openai = "^0.0.2.post1"
numexpr = "^2.8.8"
langchainhub = "^0.1.14"
wikipedia = "^1.4.0"
google-api-python-client = "^2.126.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
python-dotenv = "^1.0.1"
streamlit-authenticator = "^0.3.2"
google-search-results = "^2.4.2"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
