[tool.poetry]
name = "CCBot"
version = "0.2.0"
description = "A Comprehensive Chat Bot Build With LangChain."
authors = ["Cai, Zhengyang <tsieyy@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chat_bot"}]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain = {version = ">=0.1.20"}
openai = ">=1.6.1"
duckduckgo-search = ">4.0"
pypdf = "^3.12.2"
sentence-transformers = "^2.2.2"
torch = ">=2.0.0, !=2.0.1"
tabulate = "^0.9.0"
streamlit-feedback = "^0.0.9"
langchain-experimental = "^0.0.58"
streamlit = ">=1.26"
docarray = "^0.38.0"
hnswlib = "^0.7.0"
langchain-community = "^0.0.38"
langchain-openai = "^0.1.6"
numexpr = "^2.8.8"
langchainhub = "^0.1.15"
wikipedia = "^1.4.0"
google-api-python-client = "^2.126.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
python-dotenv = "^1.0.1"
streamlit-authenticator = "^0.3.2"
google-search-results = "^2.4.2"
jupyter = "^1.0.0"
beautifulsoup4 = "^4.12.3"
langgraph = "^0.0.48"
matplotlib = "^3.8.4"
streamlit-option-menu = "^0.3.12"
md2pdf = "^1.0.1"
pyyaml = "^6.0.1"
python-docx = "^1.1.2"
markdown = "^3.6"
pymupdf = "^1.24.4"
htmldocx = "^0.0.6"
aiofiles = "^23.2.1"
colorama = "^0.4.6"
gpt-researcher = "^0.4.5"
emoji = "^2.11.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
